@@ -1,5 +1,7 @@
 2009-03-09  higepon  <higepon@users.sourceforge.jp>
 
+        * scripts/scmc2fasl.scm (main): Added sanity-check.
+
         * scripts/binary2c.scm : Set (buffer-mode none). We may have buffering problem.
 
 2009-03-08  kokosabu  <kokosabu@gmail.com>
